# pixie

./: .gitignore  PicC.cabal  README.md  pixie.cabal
src/: .ghci
src/PicC/: .ghci  PicC.hs  TSFunGadt.hs  TSFunTF.hs
src/Pixie/: Pixie.hs  TSFunGadt.hs  TSFunTF.hs
