Name:                PicC
Version:             0.0.0
Cabal-Version:       >= 1.6
Synopsis:            
Category:            
Description:
  What's it about?
Author:              Conal Elliott
Maintainer:          conal@conal.net
Copyright:           (c) 2012 by Conal Elliott
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple

source-repository head
  type:     git
  location: git://github.com/conal/PicC.git

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base<5, arrows
  Exposed-Modules:     
                       
  ghc-options:         -Wall
