Name:                pixie
Version:             0.1.1
Cabal-Version:       >= 1.6
Synopsis:            Circuit pictures
Category:            Graphics, Circuits
Description:
  Some experiments in compositional generation of circuit pictures
Author:              Conal Elliott
Maintainer:          conal@conal.net
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple

source-repository head
  type:     git
  location: git://github.com/conal/pixie.git

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base<5, arrows, newtype, process, vector-space-points
                     , diagrams-lib, diagrams-svg, type-unary, functor-combo
                     , cat-synth
  Exposed-Modules:     
                       Pixie.TSFunGadt
                       Pixie.TSFunTF
                       Pixie.Pixie
                       
  ghc-options:         -Wall

  -- TODO: add diagrams version dependency for functions as transformables.
